crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_component_valueless_static_attr_is_empty_string_prop.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createDynamicComponent as _createDynamicComponent, template as _template } from 'vue';
const t0 = _template("hi")
export function render(_ctx) {
const n1 = _createDynamicComponent(() => (_ctx.tag), { "data-probe": () => ("") }, {
"default": () => {
const n0 = t0()
return n0
}
}, true)
return n1
}
