crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_dynamic_siblings_around_control_flow_children.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, next as _next, setClass as _setClass, createInvoker as _createInvoker, delegateEvents as _delegateEvents, nthChild as _nthChild, setInsertionState as _setInsertionState, renderEffect as _renderEffect, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<button> Bindings </button>", true)
const t1 = _template("<section><div class=\"tabs\"><button> Code </button><!----><button> Helpers </button></div></section>", true)
_delegateEvents("click")
export function render(_ctx) {
const n0 = t1()
const n1 = _child(n0)
const n2 = _child(n1)
const n3 = _next(_child(n1), 1)
const n7 = _nthChild(n1, 2)
n2.$evtclick = _createInvoker($event => (_ctx.activeTab = 'code'))
_setInsertionState(n1, n3)
const n4 = _createIf(() => (_ctx.inputMode === 'sfc'), () => {
const n6 = t0()
n6.$evtclick = _createInvoker($event => (_ctx.activeTab = 'bindings'))
_renderEffect(() => _setClass(n6, ['tab', { active: _ctx.activeTab === 'bindings' }]))
return n6
})
n7.$evtclick = _createInvoker($event => (_ctx.activeTab = 'helpers'))
_renderEffect(() => {
_setClass(n2, ['tab', { active: _ctx.activeTab === 'code' }])
_setClass(n7, ['tab', { active: _ctx.activeTab === 'helpers' }])
})
return n0
}
