crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_first_dynamic_child_after_static_sibling.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, next as _next, setClass as _setClass, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><span>static</span><button>x</button></div>", true)
export function render(_ctx) {
const n0 = t0()
const n1 = _next(_child(n0))
_renderEffect(() => _setClass(n1, _ctx.cls))
return n0
}
