crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_first_dynamic_child_after_static_text.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { child as _child, next as _next, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setClass as _setClass, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<div><span>label <span> </span></span></div>", true)
export function render(_ctx) {
const n0 = t0()
const n1 = _child(n0)
const n2 = _next(_child(n1))
const x2 = _txt(n2)
_renderEffect(() => {
_setClass(n2, _ctx.cls)
_setText(x2, _toDisplayString(_ctx.msg))
})
return n0
}
