crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_named_slot_outlet_without_props.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { createSlot as _createSlot } from 'vue';
export function render(_ctx) {
const n0 = _createSlot("head")
return n0
}
